@@ -1,3 +1,6 @@
+* #7692: Don't show pending messages when joining a chat (morgs)
+* Updated translations: nl, te, es
+
 43
 
 * Updated translations: zh_TW, ja
